--- a/doc/main.tex
+++ b/doc/main.tex
@@ -6,12 +6,14 @@
 
 \pagestyle{empty}
 \input{./tex/capa}
-\input{./tex/abstract}
+%\input{./tex/abstract}
 
 \input{./tex/dataset}
-\input{./tex/rules}
-%\input{./tex/difficulties}
-\input{./tex/experiments}
+\input{./tex/setup}
+\input{./tex/nearest_neighbors}
+\input{./tex/decision_tree}
+\input{./tex/naive_bayes}
+\input{./tex/validate}
 \input{./tex/conclusions}
 
 \bibliographystyle{plain}
