--- a/doc/tex/capa.tex
+++ b/doc/tex/capa.tex
@@ -11,13 +11,13 @@
 \vspace{4.0cm}
 \noindent
 \begin{center}
-	{\Large \bf Exercício Programa 2:\\ Prolog} \\[3cm]
+	{\Large \bf Exercício Programa 3:\\ Aprendizagem Supervisionada} \\[3cm]
 	{\Large Autor:}\\[6mm]
 	{\Large Walter Perez Urcia}\\[6mm]
 \end{center}
 
 \vspace{8cm}{
 	\center São Paulo \\[3mm]
-	Outubro 2015 \\
+	Novembro 2015 \\
 }
 \clearpage
