--- a/doc/tex/conclusions.tex
+++ b/doc/tex/conclusions.tex
@@ -1,3 +1,2 @@
 \section{Conclusões}
-	Com os resultados dos experimentos pode-se concluir que usando as 151 personagens e usando a melhor ordem para regras e fatos usando as distribuições (Experimento Best) pode ser obtida um número médio de perguntas menor que outros, mas é aquela que tem maior número de personagens em conflicto porque tem muitas personagens que tem subconjuntos de fatos de outros que estão depois delas. Por outro lado, se tiramos as personagens que estão em conflicto podemos obter melhores resultados, mas ainda assim o experimento Best tem muito mais conflictos que os outros. Os resultados mostram que não é sempre necessário ter a melhor ordem possível para as regras porque pode incluir muitos conflictos na base de conhecimento. Além disso, usando só uma característica se obtiveram resultados parecidos à ordem por default que está no site oficial do conjunto de dados como no casso do experimento Size.\\
-	Por último, as possíveis melhorias que poderiam ser feitas no programa seria adicionar mais características às personagens para não ter conflictos entre elas. Outra melhoria seria testar com todas as possíveis ordens das características e das regras de descrição na base de conhecimento para obter aquela que tenha o menor número médio de perguntas ao usuário.
+	Com os resultados dos experimentos pode-se concluir que o melhor classificador para o domínio de sms spam é Naive Bayes para ambas representações usadas. A possível razão que aconteça isso é que as características representem bastante bem cada classe usando probabilidades, mas poderia ser comprovado usando alguma outra representação de vetor de características. Além disso, a comparação feita é confiável porque apesar que os classificadores usados fazem coisas diferentes, as métricas usadas são padrão na área de aprendizagem de máquina e portanto podem ser comparadas.
